--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
     "baseUrl": ".",
     "types": [
       "webpack-env",
