--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@vue/composition-api": "^1.0.0-beta.21",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "ts-jest": "^24.3.0",
     "vue": "^2.6.11",
+    "vue-jest": "^3.0.7",
     "vuetify": "^2.3.21",
     "vuex": "^3.4.0"
   },
